--- a/src/app/places/user-places/user-places.component.html
+++ b/src/app/places/user-places/user-places.component.html
@@ -7,8 +7,8 @@
     <p class="fallback-text">{{ error() }}</p>
   }
 
-  @if (places()) {
-    <app-places [places]="places()!" />
+  @if (places().length) {
+    <app-places [places]="places()!" (selectPlace)="onRemovePlace($event)" />
   } @else if (places().length === 0) {
     <p class="fallback-text">Unfortunately, no places could be found.</p>
   }
